# flyio-fastapi

./: fly.toml  main.py  pyproject.toml
