[tool.poetry]
name = "flyio-fastapi"
version = "0.1.0"
description = "Minimum deployable fastapi project"
authors = ["Readysoon <p.gallaschik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
uvicorn = "^0.30.6"
surrealdb = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
